fix backend fronted input

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Response API</title>
+    <title>Say66-dev</title>
     <link rel="stylesheet" href="static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Random Response API</h1>
+        <h1>Say66-dev-version</h1>
         <p>Interact with the API by sending text or audio.</p>
 
         <div class="input-section">
